# RAG-Data-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  Dockerfile.backend  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_data.py
backend/agents/: analysis_agent.py  base_agent.py  enrichment_agent.py  orchestrator.py  retrieval_agent.py
backend/alembic/: env.py
backend/api/: main.py
backend/db/: database.py  models.py
backend/rag/: embeddings.py  schema_indexer.py  sql_generator.py  vector_store.py
backend/tests/: conftest.py  test_api.py
backend/utils/: data_loader.py
frontend/: Dockerfile
frontend/src/: App.jsx  index.css
src/: App.css  App.jsx
